--- a/index.html
+++ b/index.html
@@ -11,32 +11,12 @@
   </style>
 </head>
 <body>
-  <h1>Model of human immunodeficiency virus infection over time</h1>
-  <pre>
-    T: Total number of T-cells, initial value: 0
-    TL: Latent T-cells, initial value: 0
-    TA: Active T-cells, initial value: 0
-    V: HIV, initial value: 0.001
-  </pre>
-  <h4>Model</h4>
-  <img src="model.png" alt="">
-  <h4>Estimates and measured constant values</h4>
-  <img src="constants.png" alt="">
-  <h4>Axis description</h4>
-  <pre>
-    left-left: Active T-cells, TA, true scaled
-    left-right: Latent T-cells, TL, true scaled
-    right-left: Total amount of T-cells, T, true scaled
-    right-right: Amount of virus, V, axis value is damped by (y)^(1/10)
-    top: Time scale for the amount of virus, V, top x-axis value is damped by (y)^(1/5)
-    bottom: linear time scale for T, TA, TL.
-  </pre>
   <div id="plot" width="800" height="600"></div>
   <script language="javascript" type="text/javascript" src="jquery.js"></script>
   <script language="javascript" type="text/javascript" src="jquery.flot.js"></script>
   <script>
 
-  function loop(functions, initialValues, options) {
+  function loop(functions, initialValues, options, filterGraph = []) {
     const funcNames = Object.keys(initialValues),
           results = [{}];
 
@@ -70,13 +50,15 @@
     const chartData = [];
     const chartDataMap = {};
 
+    const colors = ['blue', 'green', 'red', 'orange', 'purple', 'cyan', 'yellow'];
+
     funcNames.forEach((name, index) => {
       chartDataMap[name] = index;
       chartData[index] = {
         data: [],
         label: name,
         yaxis: index + 1,
-        xaxis: name === 'V' ? 2 : 1 
+        color: colors[index]
       };
     });
 
@@ -84,23 +66,20 @@
       for (let u = 0; u < funcNames.length; u++) {
         const name = funcNames[u];
         const index = chartDataMap[name];
+        if (filterGraph.indexOf(name) > -1) continue;
         chartData[index].data.push([
           results[i]['_time'],
           results[i][name]
         ]);
       }
     }
+    const yaxes = funcNames.map((o, i) => {return {position: 'left', label: 'wef'}});
     let plot = $.plot('#plot', chartData, {
-      xaxes: [
-        { position: 'bottom' },
-        { position: 'top', transform: v => Math.pow(v, 1/5) },
-      ],
-      yaxes: [
-        { position: 'right' },
-        { position: 'left', transform: v => v },
-        { position: 'left', transform: v => v },
-        { position: 'right',  transform: v => Math.pow(v, 1/10)}
-      ],
+      // xaxes: [
+      //   { position: 'bottom' },
+      //   { position: 'top', transform: v => Math.pow(v, 1/5) },
+      // ],
+      yaxes,
       grid: { color: "#999", hoverable: true}
     });
     $.each(plot.getAxes(), function (i, axis) {
@@ -109,52 +88,40 @@
 
       var box = axis.box;
 
-      $("<div class='axisTarget' style='position:absolute; left:" + box.left + "px; top:" + box.top + "px; width:" + box.width +  "px; height:" + box.height + "px'></div>")
-        .data("axis.direction", axis.direction)
-        .data("axis.n", axis.n)
-        .css({ backgroundColor: "#f00", opacity: 0, cursor: "pointer" })
-        .appendTo(plot.getPlaceholder())
-        .hover(
-          function () { $(this).css({ opacity: 0.10 }) },
-          function () { $(this).css({ opacity: 0 }) }
-        )
-        .click(function () {
-          if (axis.direction === 'y') {
-            console.log("You clicked the y - " + funcNames[axis.n - 1] + " axis!")
-          } else {
-            console.log("You clicked the x - " + (axis.n === 2 ? 'ln-scaled time with respect to the virus' : 'time') + " axis!")
-          }
+      if (axis.direction === 'y') {
+
+        $("<div class='axisTarget' style='text-align: center;position:absolute; left:" + box.left + "px; top:" + box.top + "px; width:" + box.width +  "px; height:" + box.height + "px'>" + funcNames[axis.n - 1] + "</div>")
+          .data("axis.direction", axis.direction)
+          .data("axis.n", axis.n)
+          .css({ backgroundColor: colors[axis.n - 1], height: '20px'})
+          .appendTo(plot.getPlaceholder())
+          .click(function () {
+            console.log("You clicked the y - " + colors[axis.n - 1] + " axis!")
         });
+      }
+
     });
     return results;
   }
 
 
-  const s     = 10,
-        r     = 0.03,
-        TMAX  = 1500,
-        mu    = 0.02,
-        beta  = 0.24,
-        alpha = 2.4,
-        k_1   = 2.4 * Math.pow(10, -5),
-        k_2   = 3 * Math.pow(10, -3),
-        n     = 1400;
+  const yr = 1,
+        xr = 1,
+        X_MAX = 10,
+        Y_MAX = 10;
 
+  const fun = (x, y, CAP) => -x * Math.sign(yr - xr) * (1 - x / CAP) + y * (yr - xr);
 
   loop({
-    dT: ({T, TL, TA, V}) => s + r * T * (1 - (T + TL + TA) / TMAX) - mu * T - k_1 * V * T,
-    dTL: ({T, TL, TA, V}) => k_1 * V * T - mu * TL - k_2 * TL,
-    dTA: ({T, TL, TA, V}) => k_2 * TL - beta * TA,
-    dV: ({T, TL, TA, V}) => n * beta * TA - k_1 * V * T - alpha * V,
+    dX: ({Y, X}) => fun(X, Y, Y_MAX),
+    dY: ({Y, X}) => fun(X, Y, X_MAX),
   }, {
-    T: 0,
-    TL: 0,
-    TA: 0,
-    V: 0.001
+    Y: 10,
+    X: 10,
   }, {
     step: 0.01,
-    range: [0, 180]
-  });
+    range: [0, 15]
+  }, ['X']);
 
 
   </script>
