--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script src='./util.js'></script>
 </head>
-<body>
-
-  <canvas id='buffer'></canvas>
-
-</body>
+<body></body>
 </html>
